--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "clsx": "^2.1.1",
     "commerce-kit": "^0.0.37",
     "embla-carousel-react": "^8.5.1",
+    "fp-ts": "^2.16.9",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "ramda": "^0.30.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "stripe": "^17.4.0",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/node": "^20",
+    "@types/ramda": "^0.30.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
