--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.5.1",
     "fp-ts": "^2.16.9",
     "lucide-react": "^0.460.0",
+    "morphism": "^1.12.3",
     "next": "15.0.3",
     "ramda": "^0.30.1",
     "react": "19.0.0-rc-66855b96-20241106",
